# kms-scrapy

./: .clinerules-code  .env.template  .gitignore  CHANGELOG.md  README.md  confluence_scraper.py  main.py  pyproject.toml  requirements.txt  scrapy.cfg
aigc/: open-dify.py
api/: README.md  README_LOGS.md  api_kms_service.py  api_service.py  common.py  design_doc.md  dify_service.py  init_db.py  main.py  pyproject_update.md  test_api.py  test_api_logs.py
api/database/: db.py  models.py
api/middleware/: __init__.py  auth.py  logging.py
api/models/: __init__.py  request.py  response.py
api/router/: api_kms_service.py  api_service.py  common.py  dify_service.py
api/utils/: __init__.py  index.py
crawler/: main.py  utils.py
crawler/core/: auth.py  config.py  content.py  exporter.py  optimizer.py  spider.py  tree_extractor.py
crawler/test/: kms-demo.py  settings.py
dify/: CHANGELOG.md  IMPLEMENTATION_PLAN.md  README.md  __init__.py  config.py  main.py  workflow.md
dify/api/: client.py
dify/core/: __init__.py  knowledge_base.py
dify/examples/: upload_documents.py
dify/utils/: __init__.py  (+1 more)
docs/: attachment_filter_flow.md  gen-target-architecture.md  gen-target-user-guide.md
examples/: flatten_and_convert_examples.md  flatten_directory_examples.md  md_to_word_examples.md
jira/: CONFIG_DESIGN.md  EXPORTER_DESIGN.md  IMPLEMENTATION_PLAN.md  SPIDER_DESIGN.md  main.py  readme.md
scrapy-baidu/: .gitignore  IMPLEMENTATION_PLAN.md  README.md  main.py  scrapy.cfg
tools/: flatten_and_convert.py  flatten_directory.py  gen_target.py  md_to_word.py
(+31 files in other folders)
